--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "moment": "^2.30.1" 
+    "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^10.0.0",
+    "gulp-sass": "^6.0.1",
+    "moment": "^2.30.1",
+    "sass": "^1.93.2"
   }
 }
-
-
